fix: Misaligned line markers when word wrap is enabled

--- a/app/javascript/scss/editor/_codemirror-6.scss
+++ b/app/javascript/scss/editor/_codemirror-6.scss
@@ -287,7 +287,7 @@
 
   &.cm-indent-markers {
     &::before {
-      left: calc(var(--indented) * -1);
+      left: calc(var(--indented) * -1 + 2px);
     }
   }
 
